--- a/graphs/pages/children.html
+++ b/graphs/pages/children.html
@@ -22,7 +22,7 @@
         </label>
     </div>
 
-    <script src="../assets/js/excerpts.js" type="text/javascript"></script>
+    <script src="../assets/js/children.js" type="text/javascript"></script>
     <div id="container0003" style="height: 480px; width: 390px; margin: 0 auto"></div>
 
     <script src="https://code.highcharts.com/highcharts.js" crossorigin="anonymous"></script>
