--- a/graphs/pages/parent.html
+++ b/graphs/pages/parent.html
@@ -16,7 +16,7 @@
 
     <script id="overall"
             url="https://raw.githubusercontent.com/thirdreading/investments/develop/warehouse/expenditure/graphs/overall.json"
-            src="../assets/js/overall.js" type="text/javascript"></script>
+            src="../assets/js/parent.js" type="text/javascript"></script>
     <div id="container0004" style="height: 390px; width: 330px;  margin: 0 auto"></div>
 
     <script src="https://code.highcharts.com/highcharts.js"></script>
