--- a/graphs/pages/overarching.html
+++ b/graphs/pages/overarching.html
@@ -21,8 +21,7 @@
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
 <script src="https://code.highcharts.com/modules/accessibility.js"></script>
 <div id="container"></div>
-<button class="toggle-collapse-node" data-value="0" style="border: 0">Toggle collapse of nodes A</button><br><br>
-<button class="toggle-collapse-node" data-value="1" style="border: 0">Toggle collapse of nodes B</button>
+<button class="toggle-collapse-node" data-value="0" style="border: 0">Toggle</button>
 <script src="../assets/js/overarching.js" type="text/javascript"></script>
 
 </body>
