--- a/graphs/pages/dag/overarching.html
+++ b/graphs/pages/dag/overarching.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../assets/css/dag/dag.css" type="text/css">
+        <link rel="stylesheet" href="../../assets/css/dag/dag.css" type="text/css">
 
         <link href="https://cdn.jsdelivr.net/npm/@fontawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
@@ -22,7 +22,7 @@
         <script src="https://code.highcharts.com/modules/accessibility.js"></script>
         <div id="container"></div>
         <button class="toggle-collapse-node" data-value="0" style="border: 0">Toggle</button>
-        <script src="../assets/js/dag/overarching.js" type="text/javascript"></script>
+        <script src="../../assets/js/dag/overarching.js" type="text/javascript"></script>
 
     </body>
 </html>
