--- a/graphs/pages/central.html
+++ b/graphs/pages/central.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
 
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="../assets/css/networks.css" type="text/css">
+      <link rel="stylesheet" href="../assets/css/networks/networks.css" type="text/css">
 
       <link href='https://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
 
