--- a/graphs/pages/networks/central.html
+++ b/graphs/pages/networks/central.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
 
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="../assets/css/networks/networks.css" type="text/css">
+      <link rel="stylesheet" href="../../assets/css/networks/networks.css" type="text/css">
 
       <link href='https://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
 
@@ -21,7 +21,7 @@
 
     <figure class="highcharts-figure">
         <div id="container"></div>
-        <script src="../assets/js/networks/central.js" type="text/javascript"></script>
+        <script src="../../assets/js/networks/central.js" type="text/javascript"></script>
         <p class="highcharts-description">
           This force directed graph shows an example of a network graph, where
           the nodes represent languages and the language families they belong to.
