--- a/graphs/pages/networks/aggregates.html
+++ b/graphs/pages/networks/aggregates.html
@@ -10,7 +10,7 @@
 
       <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 
-      <title>Central Government Segments</title>
+      <title>Central Government Expenditure Aggregates</title>
   </head>
   <body>
 
