--- a/graphs/pages/networks/disaggregates.html
+++ b/graphs/pages/networks/disaggregates.html
@@ -20,7 +20,7 @@
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
 
     <figure class="highcharts-figure">
-      <div id="container"></div>
+      <div id="container" style="height: 724px; width: 780px; margin: 0 auto"></div>
       <script src="../../assets/js/networks/disaggregates.js" type="text/javascript"></script>
       <p class="highcharts-description">
         This force directed graph shows an example of a network graph, where
