--- a/graphs/pages/networks/disaggregates.html
+++ b/graphs/pages/networks/disaggregates.html
@@ -23,11 +23,9 @@
       <div id="container" style="height: 724px; width: 780px; margin: 0 auto"></div>
       <script src="../../assets/js/networks/disaggregates.js" type="text/javascript"></script>
       <p class="highcharts-description">
-        This force directed graph shows an example of a network graph, where
-        the nodes represent languages and the language families they belong to.
-        The nodes can be dragged around and will be repositioned dynamically.
-        Network graphs are typically used to show relations in data. In this
-        case, we are showing a hierarchical structure.
+        A force directed graph of the United Kingdom treasury's central government expenditure
+        groupings; it illustrates the hierarchical breakdown of central government spending.  You
+        may drag the network around, it will reposition itself.
       </p>
     </figure>
 
