--- a/graphs/pages/networks/aggregates.html
+++ b/graphs/pages/networks/aggregates.html
@@ -20,7 +20,7 @@
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
 
     <figure class="highcharts-figure">
-        <div id="container"></div>
+        <div id="container" style="height: 624px; width: 680px; margin: 0 auto"></div>
         <script src="../../assets/js/networks/aggregates.js" type="text/javascript"></script>
     </figure>
 
