--- a/graphs/pages/delta.html
+++ b/graphs/pages/delta.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../assets/css/generic.css">
-        <link rel="stylesheet" href="../assets/css/series.css">
+        <link rel="stylesheet" href="../assets/css/menu.css">
 
         <link href="https://cdn.jsdelivr.net/npm/@fontawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
