--- a/graphs/pages/children.html
+++ b/graphs/pages/children.html
@@ -21,21 +21,21 @@
             <div class="grid-item"></div>
 
             <div class="gamma">
-                A high level illustrative summary of expenditure ... consider these graphs in relation to population,
-                demographic, changes over time [link to demography pages, which shall include spatial illustrations].  The
-                values are inflation adjusted, therefore comparable [link to deflator series pages].
+                <br/>Expenditure
             </div>
             <div class="introduction">
                 <div class="selection">
-                    <label for="option_selector"><br/>
-                        <select id="option_selector">
-                            <!-- <option id="option_selector_title">Please select a ...</option> -->
-                        </select>
-                    </label>
+                    <label for="option_selector"></label>
+                    <select id="option_selector">
+                        <!-- <option id="option_selector_title">Please select a ...</option> -->
+                    </select>
                 </div>
-
                 <script src="../assets/js/children.js" type="text/javascript"></script>
-                <div id="container0003" style="height: 480px; width: 390px; margin: 0 auto"></div>
+                <div id="container0003" style="height: 465px; width: 415px; margin: 0 auto"></div>
+                <figcaption>A high level illustrative summary of expenditure ... consider these graphs in relation to
+                    population, demographic, changes over time [link to demography pages, which shall include
+                    spatial illustrations].  The values are inflation adjusted, therefore comparable
+                    [link to deflator series pages].</figcaption>
             </div>
             <div class="grid-item"></div>
 
