--- a/graphs/pages/aggregates.html
+++ b/graphs/pages/aggregates.html
@@ -19,7 +19,10 @@
                 url="https://raw.githubusercontent.com/thirdreading/investments/develop/warehouse/expenditure/metrics/aggregates.json"
                 src="../assets/js/aggregates.js" type="text/javascript">
         </script>
-        <div id="container0001" style="height: 850px; width: 500px;  margin: 0 auto"></div>
+        <div id="container0001" style="height: 645px; width: 500px;  margin: 0 auto"></div>
+        <figcaption style="width: 600px; margin-left: 205px">The United Kingdom's expenditure summaries are split into central & local government summaries.  Each summary has
+            a [disaggregates tree].  These graphs above are high level disaggregates summaries of central government expenditure
+            across the years; deflator adjusted.</figcaption>
 
         <script src="https://code.highcharts.com/stock/highstock.js"></script>
         <script src="https://code.highcharts.com/stock/modules/data.js"></script>
