--- a/graphs/pages/delta.html
+++ b/graphs/pages/delta.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../assets/css/generic.css" type="text/css">
         <link rel="stylesheet" href="../assets/css/menu.css" type="text/css">
+        <link rel="stylesheet" href="../assets/css/generic.css" type="text/css">
 
-        <link href="https://cdn.jsdelivr.net/npm/@fontawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
         <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
 
@@ -26,7 +26,7 @@
         <script id="delta"
                 url="https://raw.githubusercontent.com/thirdreading/investments/develop/warehouse/expenditure/metrics/aggregates.json"
                 src="../assets/js/delta.js" type="text/javascript"></script>
-        <div id="container0011" style="height: 390px; width: 330px;  margin: 0 auto"></div>
+        <div id="container0011" style="height: 360px; width: 330px;  margin: 0 auto"></div>
 
         <script src="https://code.highcharts.com/highcharts.js"></script>
         <script src="https://code.highcharts.com/highcharts-more.js"></script>
