--- a/graphs/pages/delta.html
+++ b/graphs/pages/delta.html
@@ -15,18 +15,35 @@
     </head>
     <body>
 
-        <div class="selection">
-            <label for="option_selector"><br/>
-                <select id="option_selector">
-                    <!-- <option id="option_selector_title">Please select a ...</option> -->
-                </select>
-            </label>
+        <div class="grid-container">
+
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+
+            <div class="gamma"></div>
+            <div class="introduction">
+                <div class="selection">
+                    <label for="option_selector"><br/>
+                        <select id="option_selector">
+                            <!-- <option id="option_selector_title">Please select a ...</option> -->
+                        </select>
+                    </label>
+                </div>
+                <script id="delta"
+                        url="https://raw.githubusercontent.com/thirdreading/investments/develop/warehouse/expenditure/metrics/aggregates.json"
+                        src="../assets/js/delta.js" type="text/javascript"></script>
+                <div id="container0011" style="height: 360px; width: 330px;  margin: 0 auto"></div>
+            </div>
+            <div class="grid-item"></div>
+
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+
         </div>
 
-        <script id="delta"
-                url="https://raw.githubusercontent.com/thirdreading/investments/develop/warehouse/expenditure/metrics/aggregates.json"
-                src="../assets/js/delta.js" type="text/javascript"></script>
-        <div id="container0011" style="height: 360px; width: 330px;  margin: 0 auto"></div>
+
 
         <script src="https://code.highcharts.com/highcharts.js"></script>
         <script src="https://code.highcharts.com/highcharts-more.js"></script>
