--- a/graphs/pages/deflator.html
+++ b/graphs/pages/deflator.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="../assets/css/menu.css" type="text/css">
+        <link rel="stylesheet" href="../assets/css/generic.css" type="text/css">
 
         <link href="https://cdn.jsdelivr.net/npm/@fontawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
@@ -13,10 +15,26 @@
     </head>
     <body>
 
-        <script id="deflator"
-                url="https://raw.githubusercontent.com/thirdreading/investments/develop/warehouse/deflator/series.json"
-                src="../assets/js/deflator.js" type="text/javascript"></script>
-        <div id="container0005" style="height: 465px; width: 435px;  margin: 0 auto"></div>
+        <div class="grid-container">
+
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+
+            <div class="gamma"></div>
+            <div class="introduction">
+                <script id="deflator"
+                        url="https://raw.githubusercontent.com/thirdreading/investments/develop/warehouse/deflator/series.json"
+                        src="../assets/js/deflator.js" type="text/javascript"></script>
+                <div id="container0005" style="height: 465px; width: 435px;  margin: 0 auto"></div>
+            </div>
+            <div class="grid-item"></div>
+
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+            <div class="grid-item"></div>
+
+        </div>
 
         <script src="https://code.highcharts.com/stock/highstock.js"></script>
         <script src="https://code.highcharts.com/stock/modules/data.js"></script>
