--- a/graphs/pages/deflator.html
+++ b/graphs/pages/deflator.html
@@ -26,14 +26,14 @@
                 <script id="deflator"
                         url="https://raw.githubusercontent.com/thirdreading/investments/develop/warehouse/deflator/series.json"
                         src="../assets/js/deflator.js" type="text/javascript"></script>
-                <div id="container0005" style="height: 465px; width: 435px;  margin: 0 auto"></div>
+                <div id="container0005" style="height: 445px; width: 390px;  margin: 0 auto"></div>
             </div>
             <div class="grid-item">
                 <figcaption>
                     This series is a <b>rebased</b> United Kingdom Treasury deflator series.  At present, the base year of a
                     treasury's series is the latest year of the series.  For comparative analytics purposes, each deflator series
                     is rebased such that the base year is the indicated year.<br><br>
-                    [Source: <a href="https://www.gov.uk/government/collections/gdp-deflators-at-market-prices-and-money-gdp#full-publication-update-history" target="_blank">
+                    [Source: <a href="https://www.gov.uk/government/collections/gdp-deflators-at-market-prices-and-money-gdp" target="_blank">
                     <span style="text-decoration: underline;">The gross domestic product (GDP) deflators at market prices, and money GDP</span></a>]
                 </figcaption>
             </div>
