--- a/graphs/pages/disaggregates.html
+++ b/graphs/pages/disaggregates.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="../assets/css/menu.css" type="text/css">
+    <link rel="stylesheet" href="../assets/css/generic.css" type="text/css">
+    
     <title>Disaggregates</title>
 </head>
 <body>
