--- a/graphs/pages/disaggregates.html
+++ b/graphs/pages/disaggregates.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../assets/css/menu.css" type="text/css">
     <link rel="stylesheet" href="../assets/css/generic.css" type="text/css">
-    
+
+    <link href='https://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+
     <title>Disaggregates</title>
 </head>
 <body>
