--- a/graphs/pages/disaggregates.html
+++ b/graphs/pages/disaggregates.html
@@ -17,8 +17,23 @@
 
         <div class="grid-container">
 
-            <div class="gamma"></div>
-            <div class="introduction"></div>
+            <div class="gamma">
+                <br/>Expenditure
+            </div>
+            <div class="introduction">
+                <div class="selection">
+                    <label for="option_selector"></label>
+                    <select id="option_selector">
+                        <!-- <option id="option_selector_title">Please select a ...</option> -->
+                    </select>
+                </div>
+                <script src="../assets/js/disaggregates.js" type="text/javascript"></script>
+                <div id="container0005" style="height: 465px; width: 415px; margin: 0 auto"></div>
+                <figcaption>A high level illustrative summary of expenditure ... consider these graphs in relation to
+                    population, demographic, changes over time [link to demography pages, which shall include
+                    spatial illustrations].  The values are inflation adjusted, therefore comparable
+                    [link to deflator series pages].</figcaption>
+            </div>
             <div class="grid-item"></div>
 
             <div class="grid-item"></div>
